dev-system/services/proxy/clash-node-port.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: clash-node-port
  labels:
    app: clash
  annotations:
    service.kubernetes.io/topology-mode: Auto
spec:
  selector:
    app: clash
  type: NodePort
  ports:
  - port: 7890
    targetPort: proxy
    name: proxy
    nodePort: 30789
