dev-system/services/proxy/clash.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clash
  labels:
    app: clash
  annotations:
    reloader.stakater.com/auto: 'true'
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      name: clash
      labels:
        app: clash
    spec:
      containers:
      - name: clash
        image: wener/clash
        imagePullPolicy: Always
        command:
        - clash
        - -f
        - /etc/clash/config.yaml
        ports:
        - containerPort: 7890
          name: proxy
          hostPort: 1080
        - containerPort: 9090
          name: dashboard
        - containerPort: 7893
          name: tproxy
        - containerPort: 53
          name: dns
          protocol: UDP
#          hostPort: 53
        volumeMounts:
        - mountPath: /etc/clash
          name: config
      volumes:
      - name: config
        secret:
          secretName: clash-config
      restartPolicy: Always
  selector:
    matchLabels:
      app: clash


---

apiVersion: v1
kind: Service
metadata:
  name: clash
  labels:
    app: clash
spec:
  selector:
    app: clash
  ports:
  - port: 7890
    targetPort: proxy
    name: proxy
  - port: 80
    targetPort: dashboard
    name: dashboard
