dev-system/services/proxy/proxy.clash.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy
  labels:
    app: clash
  annotations:
    service.kubernetes.io/topology-mode: Auto
spec:
  selector:
    app: clash
  ports:
  - port: 1080
    targetPort: proxy
    name: proxy
  ipFamilyPolicy: SingleStack
