dev-system/services/proxy/proxy.mihomo.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy
  labels:
    app: mihomo
  annotations:
    service.kubernetes.io/topology-mode: Auto
spec:
  selector:
    app: mihomo
  ports:
  - port: 1080
    targetPort: proxy
    name: proxy
  - port: 7890
    targetPort: proxy
    name: proxy-alt
